fixed dark mode text

--- a/src/App.css
+++ b/src/App.css
@@ -273,7 +273,8 @@
   background-color: #2b3844;
   color: white;
 }
-.darkMode .searchBoxContainer input::placeholder {
+.darkMode .searchBoxContainer input::placeholder,
+.darkMode .searchBoxContainer input {
   color: white;
 }
 .darkMode .filterRegion {
